Fix question_answer_items to have word wrap

--- a/frontend/src/stylesheets/question_answer_index.scss
+++ b/frontend/src/stylesheets/question_answer_index.scss
@@ -58,6 +58,7 @@
 
     .answer-body {
         font-size: 16px;
+        word-wrap: break-word;
     }
 
     .answer-footer {
